--- a/Bio.html
+++ b/Bio.html
@@ -1,12 +1,11 @@
 ---
 layout: default
-title: Systemische Beratung und Mediation
+title: Werdegang und Interessen
 ---
 
 
 <div id="Bio">
 
-    <h1>Über mich</h1>
     
     <img src="/images/visitcard4.JPG" class="half-width right" />
 
@@ -22,24 +21,37 @@ title: Systemische Beratung und Mediation
         Weiterbildung zur Systemischen Supervisorin, Coach und Organisationsentwicklerin am <a href="http://www.hisw.de">HISW</a> (Beginn: 2018)
     </li>
     <li>
-        Lego® Serious Play® Moderatorin bei <a href="https//:www.oose.de">oose Innovative Informatik</a>
+        Lego® Serious Play® Moderatorin bei <a href="https//www.oose.de">oose Innovative Informatik</a>
     </li>
     <li>
-        ZRM (Zürcher Ressourcen Modell) bei <a href="https//:www.oose.de">oose Innovative Informatik</a>
+        ZRM (Zürcher Ressourcen Modell) bei <a href="https//www.oose.de">oose Innovative Informatik</a>
     </li>
     <li>
-        Kurs zu Konfliktmanagement an der <a href="https://www.vhs-hamburg.de/">VHS Hamburg</a>
-    </li>
+        Professional Scrum Master™ (PSM) <a href="www.scrum.org">(scrum.org)</a></li>
     <li>
-        Studium Soziologie, Kulturanthropologie und Slavistik an der Universität Hamburg
-    </li>
+        Konfliktmanagement- und beratung (VHS Hamburg)</li>
     <li>
-
-    </li>
-    <li>
-
+        Studium der Soziologie, Kulturanthropologie und Slavistik an der Universität Hamburg
     </li>
 </ul>
 
+<h2>Mitgliedschaften und Interessen</h2>
+<ul>
+    <li>
+        Literatur (Schreiben und Lesen), Psychologie, Konfliktforschung und Gruppendynamik, Methodenentwicklung
+    </li>
+    <li>
+        <a href="www.dgsf.org">DGSF</a>
+    </li>
+    <li>
+        <a href="www.ccc.de">CCC e.V.</a>
+    </li>
+</ul>
 
+<h2>Blog?</h2>
+<ul>
+    <li>
+        Ich blogge unregelmäßig regelmäßig bei <a href="https://inoio.de/blog/">inoio.de</a>
+    </li>
+</ul>
 </div>
