--- a/Bio.html
+++ b/Bio.html
@@ -21,13 +21,13 @@ title: Werdegang und Interessen
         Weiterbildung zur Systemischen Supervisorin, Coach und Organisationsentwicklerin am <a href="http://www.hisw.de">HISW</a> (Beginn: 2018)
     </li>
     <li>
-        Lego® Serious Play® Moderatorin bei <a href="https//www.oose.de">oose Innovative Informatik</a>
+        Lego® Serious Play® Moderatorin bei <a href="http://www.oose.de">oose Innovative Informatik</a>
     </li>
     <li>
-        ZRM (Zürcher Ressourcen Modell) bei <a href="https//www.oose.de">oose Innovative Informatik</a>
+        ZRM (Zürcher Ressourcen Modell) bei <a href="http://www.oose.de">oose Innovative Informatik</a>
     </li>
     <li>
-        Professional Scrum Master™ (PSM) <a href="www.scrum.org">(scrum.org)</a></li>
+        Professional Scrum Master™ (PSM) <a href="http://www.scrum.org">(scrum.org)</a></li>
     <li>
         Konfliktmanagement- und beratung (VHS Hamburg)</li>
     <li>
@@ -41,10 +41,10 @@ title: Werdegang und Interessen
         Literatur (Schreiben und Lesen), Psychologie, Konfliktforschung und Gruppendynamik, Methodenentwicklung
     </li>
     <li>
-        <a href="www.dgsf.org">DGSF</a>
+        <a href="http://www.dgsf.org">DGSF</a>
     </li>
     <li>
-        <a href="www.ccc.de">CCC e.V.</a>
+        <a href="http://www.ccc.de">CCC e.V.</a>
     </li>
 </ul>
 
